# ml10x-access-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/skills/: ml10x-preset.md
.github/workflows/: ci.yml
crates/ml10x/: Cargo.toml
crates/ml10x-core/: Cargo.toml
crates/ml10x-core/src/: decode.rs  device.rs  diff.rs  encode.rs  handshake.rs  inbound.rs  lib.rs  presets.rs  sysex.rs  validate.rs  yaml.rs
crates/ml10x-core/tests/: decode_real_device.rs  decode_roundtrip.rs  encode_advanced.rs  encode_controller.rs  encode_simple.rs
crates/ml10x-core/tests/common/: mod.rs
crates/ml10x-core/tests/fixtures/: real-device-clean-advanced-probe.json  real-device-save-preset-0.json
crates/ml10x-wasm/: Cargo.toml
crates/ml10x-wasm/src/: lib.rs
crates/ml10x-wasm/tests/: web.rs
crates/ml10x/src/: config.rs  handshake.rs  lib.rs  main.rs  midi_io.rs  output.rs  yaml_io.rs
crates/ml10x/src/commands/: diff.rs  dump.rs  helpers.rs  lint.rs  list_cmd.rs  mod.rs  ports.rs  select.rs  show.rs  sync.rs
crates/ml10x/tests/: cli_smoke.rs
crates/ml10x/tests/fixtures/: sample-preset.yaml
docs/: handshake-quirks.md  reverse-engineering-notes.md  sysex.md
schemas/: controller.schema.json  preset.schema.json
src/: config.rs  decode.rs  device.rs  encode.rs  exit_codes.rs  handshake.rs  lib.rs  main.rs  midi_io.rs  output.rs  presets.rs  sysex.rs  validate.rs  yaml_io.rs
src/commands/: diff.rs  dump.rs  helpers.rs  lint.rs  list_cmd.rs  mod.rs  ports.rs  select.rs  show.rs  sync.rs
tests/: cli_smoke.rs  decode_real_device.rs  decode_roundtrip.rs  encode_advanced.rs  encode_controller.rs  encode_simple.rs
tests/common/: mod.rs
tests/fixtures/: bad-preset.yaml  editor-device-backup.json  real-device-advanced-mode-probe.json  real-device-bypass-toggle-probe.json  real-device-connect-bank0.json  sample-preset.yaml
