[package]
name = "ml10x"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Accessible CLI and YAML workflow for the Morningstar ML10X loop switcher"
repository = "https://github.com/ragb/ml10x-access-rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ml10x"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"
dirs = "5"
thiserror = "2"
unicode-normalization = "0.1"
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
midir = "0.10"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
