[workspace]
members = ["crates/ml10x-core", "crates/ml10x", "crates/ml10x-wasm"]
# The wasm crate is built for wasm32-unknown-unknown via `wasm-pack`; exclude
# it from default workspace operations so plain `cargo build` / `cargo test`
# doesn't try to link a cdylib for the native target needlessly.
default-members = ["crates/ml10x-core", "crates/ml10x"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/ragb/ml10x-access-rs"

# Shared deps. Per-crate manifests reference these with `dep.workspace = true`,
# which keeps versions/features in lockstep without repetition. Single-consumer
# deps (midir, clap, dirs, …) stay in the crate that uses them.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
unicode-normalization = "0.1"
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
log = "0.4"
pretty_assertions = "1"
# WASM-side shared between ml10x-core (optional, behind the `tsify` feature)
# and ml10x-wasm (always on).
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"
