[package]
name = "ml10x"
description = "Accessible CLI and YAML workflow for the Morningstar ML10X loop switcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ml10x"
path = "src/main.rs"

[dependencies]
ml10x-core = { path = "../ml10x-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
# CLI-only — keep these in the crate that uses them.
toml = "0.8"
dirs = "5"
midir = "0.10"
crossbeam-channel = "0.5"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
